--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,44 +1,82 @@
 /* Porjects.scss */
 
-.photo-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Adjust the min and max widths */
-    gap: 10px; /* Adjust the gap between photos */
+  .titles{
+    padding: 100px 0;
   }
-  
-  .photo {
-    height: 200px; /* Set a common height for all photos */
-    background-size: cover;
-    background-position: center;
-  }
-  
-  /* Classes for different photo layouts within the grid */
-  .photo-3-cols {
-    grid-column-end: span 3; /* Photos 1-3 span 3 columns */
-  }
-  
-  .photo-2-cols {
-    grid-column-end: span 2; /* Photo 4 spans 2 columns */
-  }
-  
-  .photo-1-cols {
-    grid-column-end: span 1; /* Photos 5-7 span 1 column each */
-  }
-  
-
-
-  .parent {
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
+    .title-projects{
+      color: #ffffff;
+      font-size: 1.3rem;
+      transition: 0.3s;
+      cursor: pointer;
+      &:hover{
+        color: rgb(62, 5, 255);
+      }
     }
+
+    .selected{
+      color: rgb(62, 5, 255);
+      transition: 0.3s;
+    }
+
+
+    .layout {
+      display: grid;
+      grid-template-columns: repeat(8, 1fr);
+      grid-gap: 8px;
+      grid-auto-flow: dense;
+    }
+
+
+     .item:nth-child(1n){
+      grid-column:2 span;
+     
+    }
+    .item:nth-child(2n){
+      grid-column:4 span;
+    }
+    .item:nth-child(3n){
+      grid-column:2 span;
+    }
+    .item:nth-child(4n){
+      grid-column:5 span;
+      
+    }
+    .item:nth-child(5n){
+      grid-column:3 span;
+    }
+    .item:nth-child(6n){
+      grid-column:4 span;
+    }
+    .item:nth-child(7n){
+      grid-column:4 span;
     
-    .div1 { grid-area: 1 / 1 / 2 / 3; }
-    .div2 { grid-area: 1 / 3 / 2 / 7; }
-    .div3 { grid-area: 1 / 7 / 2 / 9; }
-    .div4 { grid-area: 2 / 1 / 3 / 6; }
-    .div5 { grid-area: 2 / 6 / 3 / 9; }
-    .div6 { grid-area: 3 / 5 / 4 / 9; }
-    .div7 { grid-area: 3 / 1 / 4 / 5; }
+    } 
+     .item:nth-child(8n){
+      grid-column:2 span;
+    }
+    .item:nth-child(9n){
+      grid-column:4 span;
+    }
+    .item:nth-child(10n){
+      grid-column:2 span;
+    }
+    .item:nth-child(11n){
+      grid-column:5 span;
+    }
+    .item:nth-child(12n){
+      grid-column:3 span;
+    }
+    .item:nth-child(13n ){
+      grid-column:4 span;
+    }
+    .item:nth-child(14n){
+      grid-column:4 span;
+    } 
+    
+
+    .image-project{
+      max-width: 100%;
+      height: auto;
+      display: block;
+      object-fit: cover;
+  }
