--- a/src/index.css
+++ b/src/index.css
@@ -25,11 +25,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+pre {
+  font-family: 'Gothic';
+  color: #ffffff;
 }
 
+*{
+  box-sizing: border-box;
+  color: #ffffff;
+}
 
 
 
