--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,20 @@
   background: #000;
 }
 
+button{
+  background-color: rgb(62, 5, 255);
+  border: none;
+  color: rgb(255, 255, 255);
+  padding: 10px 30px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 30px;
+  font-weight: 700;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
