--- a/src/components/Home/Text/Text.scss
+++ b/src/components/Home/Text/Text.scss
@@ -1,5 +1,5 @@
 .text-header{
-    font-size: 25px;
+    font-size: 1.5rem;
     color: #ffffff;
     text-align: left;
     padding: 100px 0;
@@ -10,4 +10,57 @@
     display: inline-flex;
     color: #3e05ff;
     cursor: pointer;
+}
+
+.text-desc{
+    width: 50%;
+}
+
+.video-container{
+    width: '100%';
+    height: '700px';
+    z-index:100; 
+    height: 700px;
+}
+
+.video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+@media screen and (max-width: 768px) {
+    .text-header{
+        font-size: 1rem ;
+        padding-top:100px;
+    }
+    .text-desc{
+        width: 75%;
+    }
+    .video-container{
+        width: 100%;
+        height: 400px;
+    }
+    .video{
+        object-fit: none;
+    }
+
+    
+}
+
+
+@media screen and (max-width: 450px) {
+    .text-header{
+        font-size: 0.8rem ;
+        padding-top:100px;
+    }
+    .text-desc{
+        width: 75%;
+    }
+    .video-container{
+        width: 100%;
+        height: 200px;
+    }
+    
 }
