--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -32,14 +32,16 @@
   display: flex;
   justify-content: end;
   align-items: start;
- 
   width: 100%;
   gap: 20px;
   font-family: 'Gothic-Bold';
   font-size: 19px;
 }
 
-
+.selected{
+  color: rgb(62, 5, 255);
+  transition: 0.3s;
+}
 
   .st0{display: block;}
 	.st1{display:inline;fill:#FFFFFF;}
