--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,7 +1,7 @@
 /* Porjects.scss */
 
   .titles{
-    padding: 100px 0;
+    padding-bottom: 20px;
   }
     .title-projects{
       color: #ffffff;
@@ -18,65 +18,124 @@
       transition: 0.3s;
     }
 
-
+//////////////////////////////////////////////////////////////
+///Grid Container/////////////////////////////////////////////
     .layout {
       display: grid;
-      grid-template-columns: repeat(8, 1fr);
-      grid-gap: 8px;
-      grid-auto-flow: dense;
+      grid-template-columns: repeat(12, 1fr);
+      grid-gap: 20px;
+      
+      padding: 10px;
     }
 
 
-     .item:nth-child(1n){
-      grid-column:2 span;
-     
+    .item:nth-child(7n + 1) {
+      grid-column: 3 span; 
     }
-    .item:nth-child(2n){
-      grid-column:4 span;
+    .item:nth-child(7n + 2) {
+      grid-column: 5 span; 
     }
-    .item:nth-child(3n){
-      grid-column:2 span;
+    .item:nth-child(7n + 3) {
+      grid-column: 4 span; 
     }
-    .item:nth-child(4n){
-      grid-column:5 span;
+    .item:nth-child(7n + 4) {
+      grid-column: 7 span; 
+    }
+    .item:nth-child(7n + 5) {
+      grid-column: 5 span; 
+    }
+    .item:nth-child(7n + 6) {
+      grid-column: 6 span; 
+    }
+    .item:nth-child(7n + 7) {
+      grid-column: 6 span; 
+    }
+
+
+    @media screen and (max-width: 768px) {
+      .title-projects{
+        font-size: 0.8rem;
+      }
+      .item:nth-child(7n + 1) {
+        grid-column: span 12; 
+      }
+      .item:nth-child(7n + 2) {
+        grid-column: span 12; 
+      }
+      .item:nth-child(7n + 3) {
+        grid-column: span 12; 
+      }
+      .item:nth-child(7n + 4) {
+        grid-column: span 12 
+      }
+      .item:nth-child(7n + 5) {
+        grid-column:span 12;
+      }
+      .item:nth-child(7n + 6) {
+        grid-column: span 12;
+      }
+      .item:nth-child(7n + 7) {
+        grid-column: span 12; 
+      }
+    }
+
+
+    ///////////////////////////////////////////
+    /// image
+
+    .item {
+      position: relative;
+   
+      max-height: 450px; 
+      overflow: hidden;
       
     }
-    .item:nth-child(5n){
-      grid-column:3 span;
-    }
-    .item:nth-child(6n){
-      grid-column:4 span;
-    }
-    .item:nth-child(7n){
-      grid-column:4 span;
     
-    } 
-     .item:nth-child(8n){
-      grid-column:2 span;
+    .image-container {
+      position: relative;
+      width: 100%;
+      height: 100%;
     }
-    .item:nth-child(9n){
-      grid-column:4 span;
-    }
-    .item:nth-child(10n){
-      grid-column:2 span;
-    }
-    .item:nth-child(11n){
-      grid-column:5 span;
-    }
-    .item:nth-child(12n){
-      grid-column:3 span;
-    }
-    .item:nth-child(13n ){
-      grid-column:4 span;
-    }
-    .item:nth-child(14n){
-      grid-column:4 span;
-    } 
     
-
-    .image-project{
-      max-width: 100%;
-      height: auto;
-      display: block;
+    .image-project {
+      width: 100%;
+      height: 100%;
       object-fit: cover;
-  }
+      transition: transform 0.3s ease; /* Include transform transition */
+    }
+    
+    .color-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(62, 5, 255, 0); /* Initial transparent color */
+      transition: background-color 0.3s ease; /* Include background-color transition */
+    }
+    
+    .project-title {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: transparent;
+      transition: color 0.3s ease;
+      text-align: center;
+      pointer-events: none;
+      font-size: 1.1rem;
+      font-weight: 700;
+    }
+    
+    .item:hover .project-title {
+      color: white; /* Show project title on hover */
+      cursor: pointer;
+    }
+    
+    .item:hover .color-overlay {
+      background-color: rgba(62, 5, 255, 0.8); /* Change color on hover */
+    }
+    
+    .item:hover .image-project {
+      transform: scale(1.1); /* Scale up the image on hover */
+    }
