--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -24,8 +24,7 @@
       display: grid;
       grid-template-columns: repeat(12, 1fr);
       grid-gap: 20px;
-      
-      padding: 10px;
+      padding: 20px;
     }
 
 
@@ -85,11 +84,12 @@
 
     .item {
       position: relative;
-   
+      cursor: pointer;
       max-height: 450px; 
       overflow: hidden;
       
     }
+    
     
     .image-container {
       position: relative;
