--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
 .App {
   text-align: center;
   background: #000;
-  padding-top: 600px;
+ 
 }
 
 .black{
   background: #000;
+}
+
+.bg-blue{
+  background-color: rgb(62, 5, 255);
 }
 
 button{
