--- a/src/components/Project-Details/ProjectDetails.scss
+++ b/src/components/Project-Details/ProjectDetails.scss
@@ -1,9 +1,10 @@
 .images-grid{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 30px;
-    grid-row-gap: 30px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 40px;
+  max-width: 100%;
+  overflow: hidden;
+  padding: 40px 
 }
 
 .arrows{
@@ -26,6 +27,25 @@
     font-size: 1.1em;
 }
 
+.vimeo-container{
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  
+}
+
+.vimeo-video{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
+
 
 
 
@@ -43,5 +63,11 @@
   @media screen and (max-width: 450px) {
     .credits-details{
       font-size: 0.7em;
+  }
+
+  .images-grid{
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+    padding: 20px;
   }
   }
