navbar for other pages

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,11 +6,21 @@
   z-index: 1000;
   display: flex;
   padding: 20px;
-  display: flex;
   justify-content: center;
   align-items: start;
   width: 100%;
   
+}
+
+.otherNavbar{
+  justify-content: space-between; 
+  align-items: center;
+  flex-direction: row;
+  display: flex;
+  padding: 20px;
+  background-color: #000000;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 100%;
 }
 
 .logo-container {
