--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -21,6 +21,7 @@
   background-color: #000000;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   width: 100%;
+  z-index: 1000;
 }
 
 .logo-container {
