--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,28 @@ button{
   color: #61dafb;
 }
 
+
+.slide-in{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(62, 5, 255);;
+  transform-origin: bottom;
+  z-index: 1000;
+}
+.slide-out{
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(62, 5, 255);
+  transform-origin: top;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
