--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ button{
   width: 100%;
   height: 100vh;
   background-color: rgb(62, 5, 255);;
-  transform-origin: bottom;
+  transform-origin: left;
   z-index: 1000;
 }
 .slide-out{
@@ -71,7 +71,7 @@ button{
   width: 100%;
   height: 100vh;
   background-color: rgb(62, 5, 255);
-  transform-origin: top;
+  transform-origin: right;
 }
 
 @keyframes App-logo-spin {
