navbar update with lottie and scroll

--- a/src/components/Home/Text/Text.scss
+++ b/src/components/Home/Text/Text.scss
@@ -3,6 +3,7 @@
     color: #ffffff;
     text-align: left;
     padding: 100px 0;
+    text-align: start;
   
 }
 
@@ -13,7 +14,7 @@
 }
 
 .text-desc{
-    width: 50%;
+   
 }
 
 .video-container{
