--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -28,8 +28,8 @@
 
 .logo-container {
   display: flex;
-  justify-content: center;
   align-items: center;
+  transform-origin: 0 -10%;
   
  /* Add transitions for the transformations */
 }
