--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -38,11 +38,11 @@
   
 }
 
-.contact-btn{
-    border-radius: 0;
+.send-btn{
+    
     font-weight: 100;
     align-self: self-start;
-    padding: 10px 70px;
+    background-color: transparent;
 }
 
 .form-container{
