--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,15 @@
  
 }
 
+body::-webkit-scrollbar{
+width: 3px;
+
+}
+
+body::-webkit-scrollbar-track{
+  color: #61dafb;
+}
+
 .black{
   background: #000;
 }
