--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -14,7 +14,7 @@
 
 .logo-img{
   max-width: 100%;
-  height: auto;
+  
   display: block;
   object-fit: cover;
 }
@@ -65,6 +65,12 @@
   
 }
 
+.logo-letter{
+  display: block;
+  max-width: 100%;
+  object-fit: cover;
+}
+
 .logo {
   max-width: 100%;
   height: auto;
@@ -88,3 +94,10 @@
   transition: 0.3s;
 }
 
+
+.link-social{
+ transition:  fill 0.3s ease-in-out;
+  &:hover{
+    fill: #3e05ff;
+  }
+}
