--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -25,3 +25,44 @@
 .about-padding{
     padding-top: 10%;
 }
+
+.title-team{
+    padding: 3.5rem 0;
+    font-weight: 700;
+}
+
+.container-team{
+    padding-bottom: 7rem;
+}
+
+
+.hover-underline-animation {
+    display: inline-block;
+    position: relative;
+   
+  }
+  
+  .hover-underline-animation:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: rgb(62, 5, 255);
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+  }
+  
+  .hover-underline-animation:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+  }
+
+
+  .team-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px ,1fr));
+    gap: 2rem
+  }
