--- a/src/components/Project-Details/ProjectDetails.scss
+++ b/src/components/Project-Details/ProjectDetails.scss
@@ -38,21 +38,14 @@
     font-size: 1.1em;
 }
 
-.vimeo-container{
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-  overflow: hidden;
-  max-width: 100%;
-  
+.player-wrapper {
+  max-width: 1000px;
 }
 
 .vimeo-video{
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
 }
 
 .similar-projects-container{
