--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -57,12 +57,11 @@
 
 .uence{
   z-index: 1;
+  width: 20%;
   
 }
 .seq{
   z-index: 2;
- 
-  
 }
 
 .logo-letter{
@@ -99,5 +98,12 @@
  transition:  fill 0.3s ease-in-out;
   &:hover{
     fill: #3e05ff;
+  }
+}
+
+
+@media (max-width: 768px){
+  .links-social {
+    display: none;
   }
 }
