update text animation

--- a/src/components/Home/Text/Text.scss
+++ b/src/components/Home/Text/Text.scss
@@ -2,7 +2,7 @@
     font-size: 1.5rem;
     color: #ffffff;
     text-align: left;
-    padding: 100px 0;
+    padding: 100px 20px;
     text-align: start;
   
 }
@@ -52,7 +52,7 @@
 
 @media screen and (max-width: 450px) {
     .text-header{
-        font-size: 0.8rem ;
+        font-size: 0.9rem ;
         padding-top:100px;
     }
     .text-desc{
