--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -54,7 +54,7 @@
 }
 
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 500px) {
     .contact-text{
         font-size: 1em;
         
@@ -65,6 +65,12 @@
     .error-message{
         font-size: 0.7em;
     }
+    .text-contact-container{
+        width: 100%;
+    }
+}
+
+@media screen and (min-width: 500px ) and (max-width: 1000px) {
     .text-contact-container{
         width: 75%;
     }
