--- a/src/components/Navbar/MainNavnar.scss
+++ b/src/components/Navbar/MainNavnar.scss
@@ -1,14 +1,15 @@
 :root {
-    --mainColor: #0f0627;
+    --mainColor: #000000;
     --white: #ffffff;
-    --secondaryColor: #ff1052;
+    --secondaryColor: #3e05ff;
     --textColor: #000000;
 }
 
-.link{
+.link-navbar{
     text-decoration: none;
-    font-size: 1.3rem;  
+    font-size: 1.2rem;  
     color: #fff;
+    font-weight: 600;
 }
 
 .navbar-bgc{
@@ -16,41 +17,26 @@
     padding: 20px 0;
 }
 
-.logo{
-    color: #ff1052;
-    font-size: 60px;
-    cursor: pointer;
-}
-
-.logo-desc{
-    color: #ff1052;
-    font-size: 25px;
-    font-weight: 700;
-    cursor: pointer;
-}
 
 nav .logo-div {
     display: none;
 }
 
-
-
-
-
-
-
+.hidden{
+    display: none;
+}
 
 header {
     display: flex;
     align-items: center;
     height: 80px;
     padding: 0 2rem;
-    background-color: var(--mainColor);
-    color: var(--textColor);
+    background-color: var(--textColor);
+    
 }
 
 nav a {
-    margin: 0 1rem;
+    
     color: var(--textColor);
     text-decoration: none;
     transition: 0.3s ease-in-out;
@@ -67,7 +53,7 @@ header .nav-btn {
     border: none;
     outline: none;
     color: var(--white);
-    visibility: hidden;
+    display: none;
     opacity: 0;
     font-size: 1.8rem;
 }
@@ -77,6 +63,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 20px;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -86,7 +73,7 @@ nav {
        
     }
     header .nav-btn {
-        visibility: visible;
+        display: block;
         opacity: 1;
     }
 
@@ -94,7 +81,7 @@ nav {
         position: fixed;
         top: -100vh;
         left: 0;
-        height: 100%;
+        height: 100vh;
         width: 100%;
         display: flex;
         flex-direction: column;
