--- a/src/components/Navbar/MainNavnar.scss
+++ b/src/components/Navbar/MainNavnar.scss
@@ -66,7 +66,18 @@ nav {
     gap: 20px;
 }
 
+.res-logo-menu{
+    width: 100px;
+    position: absolute;
+    top: 2rem;
+    left: 2rem;
+    display: none;
+}
+
 @media only screen and (max-width: 1024px) {
+    .res-logo-menu{
+        display: block;
+    }
 
     header{
         justify-content: space-between;
@@ -76,6 +87,7 @@ nav {
         display: block;
         opacity: 1;
     }
+
 
     header nav {
         position: fixed;
