--- a/src/components/Project-Details/ProjectDetails.scss
+++ b/src/components/Project-Details/ProjectDetails.scss
@@ -36,6 +36,9 @@
 
 .credits-details{
     font-size: 1.1em;
+    white-space: pre-wrap; /* Preserve white spaces and allow wrapping */
+  overflow-x: auto; /* Enable horizontal scrolling if content overflows */
+  max-width: 100%; 
 }
 
 .player-wrapper {
@@ -59,6 +62,9 @@
 }
 
 
+pre {
+  /* Set maximum width to 100% of its container */
+}
 
 
 
@@ -68,16 +74,14 @@
       font-size: 2rem;
     }
     .credits-details{
-      font-size: 0.9em;
+      font-size: 1em;
   }
   
   }
 
 
   @media screen and (max-width: 450px) {
-    .credits-details{
-      font-size: 0.7em;
-  }
+   
 
   .images-grid{
     grid-template-columns: repeat(1, 1fr);
