--- a/src/components/Home/Text/Text.scss
+++ b/src/components/Home/Text/Text.scss
@@ -38,10 +38,10 @@
         padding-top:100px;
     }
     
-    .video-container{
+    /* .video-container{
         width: 100%;
         height: 400px;
-    }
+    } */
     .video{
         object-fit: none;
     }
@@ -58,7 +58,7 @@
     
     .video-container{
         width: 100%;
-        height: 200px;
+        height: auto;
     }
     
 }
