--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -75,6 +75,10 @@
   
 
   @media screen and (max-width: 768px) {
+    .text-about{
+        font-size: 1em;
+       
+    }
     .skills{
         height: 300px;
     }
