--- a/src/components/Navbar/MainNavnar.scss
+++ b/src/components/Navbar/MainNavnar.scss
@@ -73,17 +73,40 @@ nav {
     left: 2rem;
     display: none;
 }
+.nav-hamburger{
+    display: none;
+}
 
 @media only screen and (max-width: 1024px) {
     .res-logo-menu{
         display: block;
     }
 
+    .nav-hamburger{
+        position: relative;
+        z-index: 889;
+        width: 80px;
+        height: 80px;
+        top: 0.2rem;
+        border-radius: 50%;
+        display: block;
+    }
+
+    .line{
+        width: 40px;
+        height: 5px;
+        background-color: #fff;
+        position: absolute;
+    }
+
+
     header{
         justify-content: space-between;
        
     }
     header .nav-btn {
+        position: relative;
+        z-index: 889;
         display: block;
         opacity: 1;
     }
@@ -102,7 +125,7 @@ nav {
         gap: 1.5rem;
         background-color: var(--mainColor);
         transition: 1s;
-        z-index: 999;
+        z-index: 888;
     }
 
     header .responsive_nav {
