--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -36,30 +36,38 @@
 .logo-container {
   display: flex;
   align-items: center;
-  transform-origin: 0 -17%;
+  transform-origin: 0 -25%;
   
  /* Add transitions for the transformations */
 }
 
 .img-seq{
-  transform-origin: 0 -13%;
+  transform-origin: 0 0;
 }
 
 .sequence-logo{
   position: relative;
+  gap: 1%;
+  user-select: none;
 }
 
 .asterisk{
   position: absolute;
-  top: -40%;
+  top: -44%;
   left: 34%;
+  width: 5%;
 }
 
 .uence{
-  z-index: 1;
+ z-index: -1;
+  display: inline-block;
+  width: 60%;
+ 
 }
 .seq{
-  z-index: 2;
+  
+  display: inline-block;
+  width: 35%;
   
 }
 
