--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -24,7 +24,15 @@ footer{
 }
 
 .footer-logo{
-    padding-bottom: 100px;
+    padding-bottom: 75px;
+    position: relative;
+}
+
+.asterisk-footer{
+    position: absolute;
+    top: 0;
+    left: 35%;
+    
 }
 
 .image-footer{
