grid fix images

--- a/src/components/Project-Details/ProjectDetails.scss
+++ b/src/components/Project-Details/ProjectDetails.scss
@@ -1,13 +1,8 @@
 .images-grid{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 40px;
-  max-width: 80%;
-  overflow: hidden;
-  padding: 40px ;
-  justify-content: center;
-  margin: 0 auto;
-
+  gap: 30px;
+  padding: 40px 0;
 }
 
 .arrows{
