--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -92,12 +92,18 @@
 
 
     
+    .blur-placeholderr {
+      width: 100%;
+      height: 100%;
+      
+    }
     
     
     .image-container {
       position: relative;
       width: 100%;
       height: 100%;
+      overflow: hidden;
     }
     
     .image-project {
