--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -91,7 +91,7 @@
   align-items: start;
   width: 100%;
   gap: 20px;
-  font-family: 'Gothic-Bold';
+  font-family: 'Gothic';
   font-size: 19px;
  
 
