--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -72,6 +72,31 @@
   }
 
 
+  .team-img-container{
+    width: 180px;
+    height: 180px;
+    position: relative;
+  }
+
+  .team-img-container > img{
+    width: 100%;
+    height: 100%;
+  }
+
+  .team-overlay-color{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: rgba(62, 5, 255, 0);
+    transition: 0.3s;
+    &:hover{
+        background-color: rgba(62, 5, 255, 0.5);
+        cursor: pointer;
+    }
+  }
+
   
 
   @media screen and (max-width: 768px) {
