--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -96,10 +96,10 @@
     
     
     .image-container {
-      position: relative;
+      background-color: aliceblue;
       width: 100%;
-      height: 100%;
-      overflow: hidden;
+     height: 100%;
+      
     }
     
     .image-project {
