נגישות יצירת קשר ואודות הוספת דפים חוקיים

--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -11,6 +11,15 @@
     text-align: left;
     overflow: hidden;
 }
+.legal-text{
+    font-size: 1.2em;
+    font-weight: 600;
+   
+}
+
+.legal-page-margin{
+    padding-top: 7rem;
+}
 
 
 .carousel{
