--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -2,6 +2,15 @@
 
   .titles{
     padding-bottom: 20px;
+     list-style: 'none';
+        padding: 0;
+        margin: 0;
+        display: 'flex';
+        justify-content: 'center';
+        flex-wrap: nowrap;
+        gap: 1.5rem;
+        
+      
   }
     .title-projects {
   color: #ffffff;
@@ -63,7 +72,11 @@
 
     @media screen and (max-width: 768px) {
       .title-projects{
-        font-size:1rem;
+        font-size:0.9rem;
+      }
+
+      .titles{
+        gap: 0.5rem;
       }
       .item:nth-child(7n + 1) {
         grid-column: span 12; 
